# barto-sutton-solutions

./: .gitignore  README.md  pyproject.toml
notebooks/: Ex-2.1.ipynb  Ex-2.3.ipynb  Ex-2.5.ipynb  Ex-2.6.ipynb  Ex-2.7.ipynb  gradient_bandits.ipynb  k-armed_Bandit.ipynb  optimistic_initial_value.ipynb  ucb.ipynb
theory/: Ch-2.md
