[project]
name = "barton-sutton"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.4.2",
    "jupyterlab-ariakedark-theme>=0.2.1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
]
